[package]
name = "cex-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
futures-util = "0.3"
axum = "0.7"
tower-http = {version = "0.6", features = ["cors"]}