[package]
name = "cex-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
futures-util = "0.3"
axum = "0.7"
tower-http = {version = "0.6", features = ["cors"]}
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros"] }
jsonwebtoken = "9.3"
bcrypt = "0.15"
dotenvy = "0.15"
 